--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,13 +12,12 @@ body {
   height: 100vh;
 }
 
+
+/* Specific to login page */
 .front-page {
   grid-template-columns: 50% 50%;
 }
-.feed-page {
-  grid-template-columns: 20% 60% 20%;
-  background: #151D26;
-}
+
 .half-screen {
   height: 100%;
   background: #ED8121;
@@ -29,9 +28,26 @@ body {
   background: #151D26;
   color: #ED8121;
 }
-.no-pad {
-  padding: 0px;
+
+/* Specific to feed page */
+.feed-page {
+  grid-template-columns: 20% 60% 20%;
+  background: #151D26;
 }
+.feed-middle {
+  border-left: #ED8121 1px solid;
+  border-right: #ED8121 1px solid; 
+}
+
+/* Borders */
+.bottom-border {
+  border-bottom: #ED8121 1px solid;
+}
+/* Text decoration */
+.orange {
+  color: #ED8121;
+}
+/* Centering tools */
 .text-center {
   text-align: center;
 }
@@ -39,9 +55,17 @@ body {
   margin: auto;
   width: 55%;
 }
+
+/* Padding and margins */
+.no-pad {
+  padding: 0px;
+}
+
 .top-20 {
   margin-top: 20px;
 }
+
+/* Buttons */
 .light-input {
   border: 3px solid #ED8121;
   background:  #151D26;
