--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,8 @@ a {
 
 /* Specific to feed page */
 .feed-page {
-  grid-template-columns: 20% 60% 20%;
+  max-width: 700px;
+  margin: auto;
   background: #151D26;
 }
 .feed-middle {
